# PhotoManager

./: .env_example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
PhotoManager/: settings.py  urls.py
nginx/: nginx.conf
photo_api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
